--- a/markdown/Trabalho I/relatorio_test.Rmd
+++ b/markdown/Trabalho I/relatorio_test.Rmd
@@ -51,17 +51,18 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
                 && \multicolumn{2}{c}{Masculino} & \multicolumn{2}{c}{Feminino}  \\ \cmidrule{3-8}
                 && n & \% & n & \% & Total & P-Valor \\ \cmidrule{3-8}
                 \multicolumn{1}{c}{\multirow{5}{*}}   &
-                \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  &  &  & 0 \\
+                \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Nao} & &  & 59.0 & 18.0 & 17.3 & 5.8 &  \\
+                \multicolumn{1}{l}{Não} & 0 & 0 & 59.0 & 18.0 & 17.3 & 5.8 &  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\
+                \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\ \cmidrule{1-8}
+                \multicolumn{1}{l}{\textbf{Estado Civil}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}                
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Neutral} &1.4 & 16.6 & 70.8 & 8.0 & 3.1  \\
+                \multicolumn{1}{l}{Casado} &1.4 & 16.6 & 70.8 & 8.0 & 3.1  \\
                 \multicolumn{1}{c}{}    &   
-                \multicolumn{1}{l}{Little positive} &0.3 & 11.2 & 20.0 & 68.0 & .5  \\
+                \multicolumn{1}{l}{Solteiro} &0.3 & 11.2 & 20.0 & 68.0 & .5  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Positive} & 4.9 & 7.8 & 17.5 & 69.9  \\
+                \multicolumn{1}{l}{Viúvo} & 4.9 & 7.8 & 17.5 & 69.9  \\
             \midrule
             \bottomrule
         \end{tabular}
