--- a/markdown/Trabalho I/relatorio_test.Rmd
+++ b/markdown/Trabalho I/relatorio_test.Rmd
@@ -48,12 +48,12 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
             \toprule
             \midrule
                 & & \multicolumn{4}{c}{Sexo}\\ \cmidrule{3-8}
-                && \multicolumn{2}{c}{Masculino} & \multicolumn{2}{c}{Feminino}  \\ \cmidrule{3-8}
+                && \multicolumn{2}{c}{Masculino} & \multicolumn{2}{c}{Feminino} \\ \cmidrule{3-8}
                 && n & \% & n & \% & Total & P-Valor \\ \cmidrule{3-8}
                 \multicolumn{1}{c}{\multirow{5}{*}}   &
                 \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Não} & 0 & 0 & 59.0 & 18.0 & 17.3 & 5.8 &  \\
+                \multicolumn{1}{l}{Não} & 37 & 39.8 & 56 & 60.2 & 93 & 48.9 &  \\
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\ \cmidrule{1-8} &
                 \multicolumn{1}{l}{\textbf{Estado Civil}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}                
@@ -65,8 +65,36 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
                 \multicolumn{1}{l}{Viúvo} & 4.9 & 7.8 & 17.5 & 69.9  \\
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{Outros} & 4.9 & 7.8 & 17.5 & 69.9  \\
-            \midrule
-            \bottomrule
+                \multicolumn{1}{c}{}    &   \\ \cmidrule{1-8}             
+                & & \multicolumn{4}{c}{Satisfeito com limite}\\ \cmidrule{3-8}
+                && \multicolumn{2}{c}{Não} & \multicolumn{2}{c}{Sim}  \\ \cmidrule{3-8}
+                && n & \% & n & \% & Total & P-Valor \\ \cmidrule{3-8}
+                \multicolumn{1}{c}{\multirow{5}{*}}   &
+                \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}
+                \multicolumn{1}{c}{}    &
+                \multicolumn{1}{l}{Não} & 37 & 39.8 & 56 & 60.2 & 93 & 48.9 &  \\
+                \multicolumn{1}{c}{}    &
+                \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\ \cmidrule{1-8} &
+                \multicolumn{1}{l}{\textbf{Banco}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}                
+                \multicolumn{1}{c}{}    &
+                \multicolumn{1}{l}{BB} &1.4 & 16.6 & 70.8 & 8.0 & 3.1  \\
+                \multicolumn{1}{c}{}    &   
+                \multicolumn{1}{l}{Itaú} &0.3 & 11.2 & 20.0 & 68.0 & .5  \\
+                \multicolumn{1}{c}{}    &
+                \multicolumn{1}{l}{Bradesco} & 4.9 & 7.8 & 17.5 & 69.9  \\
+                \multicolumn{1}{c}{}    &
+                \multicolumn{1}{l}{Caixa} & 4.9 & 7.8 & 17.5 & 69.9  \\
+                \multicolumn{1}{c}{}    &
+                \multicolumn{1}{l}{Santander} & 4.9 & 7.8 & 17.5 & 69.9  \\
+                \multicolumn{1}{c}{}    &
+                \multicolumn{1}{l}{Outros} & 4.9 & 7.8 & 17.5 & 69.9  \\ \cmidrule{1-8} &
+                \multicolumn{1}{l}{\textbf{Gerente}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}
+                \multicolumn{1}{c}{}    &
+                \multicolumn{1}{l}{Não} & 37 & 39.8 & 56 & 60.2 & 93 & 48.9 &  \\
+                \multicolumn{1}{c}{}    &
+                \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\
+                \midrule
+                \bottomrule
         \end{tabular}
         \centering
         \caption{Classification results for the valence dimension.}
