--- a/markdown/Trabalho I/relatorio_test.Rmd
+++ b/markdown/Trabalho I/relatorio_test.Rmd
@@ -47,16 +47,16 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
         \begin{tabular}{c c c c c c c c c}
             \toprule
             \midrule
-                & & \multicolumn{4}{c}{Sexo}\\ \cmidrule{3-8}
-                && \multicolumn{2}{c}{Masculino} & \multicolumn{2}{c}{Feminino} \\ \cmidrule{3-8}
-                && n & \% & n & \% & Total & P-Valor \\ \cmidrule{3-8}
+                & & \multicolumn{4}{c}{Sexo}\\ \cmidrule{3-9}
+                && \multicolumn{2}{c}{Masculino} & \multicolumn{2}{c}{Feminino} & \multicolumn{2}{c}{Total} \\ \cmidrule{3-9}
+                && n & \% & n & \% & n & \% & P-Valor \\ \cmidrule{3-9}
                 \multicolumn{1}{c}{\multirow{5}{*}}   &
-                \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}
+                \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  & & &  & 0 \\ \cmidrule{1-9}
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{Não} & 37 & 39.8 & 56 & 60.2 & 93 & 48.9 &  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\ \cmidrule{1-8} &
-                \multicolumn{1}{l}{\textbf{Estado Civil}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}                
+                \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\ \cmidrule{1-9} &
+                \multicolumn{1}{l}{\textbf{Estado Civil}} &  &  &  & & &  & 0 \\ \cmidrule{1-9}                
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{Casado} &1.4 & 16.6 & 70.8 & 8.0 & 3.1  \\
                 \multicolumn{1}{c}{}    &   
@@ -64,18 +64,17 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{Viúvo} & 4.9 & 7.8 & 17.5 & 69.9  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Outros} & 4.9 & 7.8 & 17.5 & 69.9  \\
-                \multicolumn{1}{c}{}    &   \\ \cmidrule{1-8}             
-                & & \multicolumn{4}{c}{Satisfeito com limite}\\ \cmidrule{3-8}
-                && \multicolumn{2}{c}{Não} & \multicolumn{2}{c}{Sim}  \\ \cmidrule{3-8}
-                && n & \% & n & \% & Total & P-Valor \\ \cmidrule{3-8}
+                \multicolumn{1}{l}{Outros} & 4.9 & 7.8 & 17.5 & 69.9  \\ \cmidrule{1-9}             
+                & & \multicolumn{4}{c}{Satisfeito com limite}\\ \cmidrule{3-9}
+                && \multicolumn{2}{c}{Não} & \multicolumn{2}{c}{Sim} & \multicolumn{2}{c}{Total}  \\ \cmidrule{3-9}
+                && n & \% & n & \% & n & \% & P-Valor \\ \cmidrule{3-9}
                 \multicolumn{1}{c}{\multirow{5}{*}}   &
-                \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}
+                \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  & & &  & 0 \\ \cmidrule{1-9}
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{Não} & 37 & 39.8 & 56 & 60.2 & 93 & 48.9 &  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\ \cmidrule{1-8} &
-                \multicolumn{1}{l}{\textbf{Banco}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}                
+                \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\ \cmidrule{1-9} &
+                \multicolumn{1}{l}{\textbf{Banco}}&  &  &  & & &  & 0\\ \cmidrule{1-9}                
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{BB} &1.4 & 16.6 & 70.8 & 8.0 & 3.1  \\
                 \multicolumn{1}{c}{}    &   
@@ -87,8 +86,8 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{Santander} & 4.9 & 7.8 & 17.5 & 69.9  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Outros} & 4.9 & 7.8 & 17.5 & 69.9  \\ \cmidrule{1-8} &
-                \multicolumn{1}{l}{\textbf{Gerente}} &  &  &  &  &  & 0 \\ \cmidrule{1-8}
+                \multicolumn{1}{l}{Outros} & 4.9 & 7.8 & 17.5 & 69.9  \\ \cmidrule{1-9} &
+                \multicolumn{1}{l}{\textbf{Gerente}} &   &  &  & & &  & 0 \\ \cmidrule{1-9}
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{Não} & 37 & 39.8 & 56 & 60.2 & 93 & 48.9 &  \\
                 \multicolumn{1}{c}{}    &
@@ -97,7 +96,7 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
                 \bottomrule
         \end{tabular}
         \centering
-        \caption{Classification results for the valence dimension.}
+        \caption{COLOCAR DESCRIÇÃO DA TABELA AQUI!}
         \label{tab:sam_count}
 \end{table*}
 
