--- a/markdown/Trabalho I/relatorio_test.Rmd
+++ b/markdown/Trabalho I/relatorio_test.Rmd
@@ -55,43 +55,43 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{Não} & 37 & 39.8 & 56 & 60.2 & 93 & 48.9 &  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\ \cmidrule{1-9} &
+                \multicolumn{1}{l}{Sim}& 63 & 64.9 & 34 & 35.1 & 97 & 51.1  \\ \cmidrule{1-9} &
                 \multicolumn{1}{l}{\textbf{Estado Civil}} &  &  &  & & &  & 0 \\ \cmidrule{1-9}                
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Casado} &1.4 & 16.6 & 70.8 & 8.0 & 3.1  \\
+                \multicolumn{1}{l}{Casado} & 34 & 40.4 & 23 & 59.6 & 57 & 30 &  \\
                 \multicolumn{1}{c}{}    &   
-                \multicolumn{1}{l}{Solteiro} &0.3 & 11.2 & 20.0 & 68.0 & .5  \\
+                \multicolumn{1}{l}{Solteiro} & 28 & 52.5 & 31 & 47.5 & 59 & 31.1 &  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Viúvo} & 4.9 & 7.8 & 17.5 & 69.9  \\
+                \multicolumn{1}{l}{Viúvo} & 15 & 60.5 & 23 & 39.5 & 38 & 20   \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Outros} & 4.9 & 7.8 & 17.5 & 69.9  \\ \cmidrule{1-9}             
+                \multicolumn{1}{l}{Outros} & 23 & 36.1 & 13 & 63.9& 36 & 18.9   \\ \cmidrule{1-9}             
                 & & \multicolumn{4}{c}{Satisfeito com limite}\\ \cmidrule{3-9}
                 && \multicolumn{2}{c}{Não} & \multicolumn{2}{c}{Sim} & \multicolumn{2}{c}{Total}  \\ \cmidrule{3-9}
                 && n & \% & n & \% & n & \% & P-Valor \\ \cmidrule{3-9}
                 \multicolumn{1}{c}{\multirow{5}{*}}   &
-                \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  & & &  & 0 \\ \cmidrule{1-9}
+                \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  & & &  & 0.5203 \\ \cmidrule{1-9}
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Não} & 37 & 39.8 & 56 & 60.2 & 93 & 48.9 &  \\
+                \multicolumn{1}{l}{Não} & 23 & 24.7 & 28 & 28.9 & 51 & 26.8 &  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\ \cmidrule{1-9} &
-                \multicolumn{1}{l}{\textbf{Banco}}&  &  &  & & &  & 0\\ \cmidrule{1-9}                
+                \multicolumn{1}{l}{Sim}& 70 & 50.4 & 69 & 49.6 & 136 & 75.2  \\ \cmidrule{1-9} &
+                \multicolumn{1}{l}{\textbf{Banco}}&  &  &  & & &  & 0.1366\\ \cmidrule{1-9}                
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{BB} &1.4 & 16.6 & 70.8 & 8.0 & 3.1  \\
+                \multicolumn{1}{l}{BB} & 17 & 32.1 & 36 & 67.9 & 53 & 27.9  \\
                 \multicolumn{1}{c}{}    &   
-                \multicolumn{1}{l}{Itaú} &0.3 & 11.2 & 20.0 & 68.0 & .5  \\
+                \multicolumn{1}{l}{Itaú} &16 & 27.1 & 43 & 72.9 & 59 & 31.1  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Bradesco} & 4.9 & 7.8 & 17.5 & 69.9  \\
+                \multicolumn{1}{l}{Bradesco} & 2 & 20 & 8 & 80 & 10 & 5.3 \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Caixa} & 4.9 & 7.8 & 17.5 & 69.9  \\
+                \multicolumn{1}{l}{Caixa} & 8 & 44.1 & 10 & 55.9 & 36 & 18.9  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Santander} & 4.9 & 7.8 & 17.5 & 69.9  \\
+                \multicolumn{1}{l}{Santander} & 4 & 28.6 & 10 & 71.4 & 14 & 7.4  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Outros} & 4.9 & 7.8 & 17.5 & 69.9  \\ \cmidrule{1-9} &
-                \multicolumn{1}{l}{\textbf{Gerente}} &   &  &  & & &  & 0 \\ \cmidrule{1-9}
+                \multicolumn{1}{l}{Outros} & 4 & 11.1 & 32 & 88.9  & 36 & 18.9\\ \cmidrule{1-9} &
+                \multicolumn{1}{l}{\textbf{Gerente}} &   &  &  & & &  & 0.1505 \\ \cmidrule{1-9}
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Não} & 37 & 39.8 & 56 & 60.2 & 93 & 48.9 &  \\
+                \multicolumn{1}{l}{Não} & 28 & 31.8 & 60 & 68.2 & 88 & 48.9 &  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Sim}& 0.9 & 66.6 & 16.7 & 10.7 & 5.1  \\
+                \multicolumn{1}{l}{Sim}& 23 & 22.5 & 79 & 77.5 & 102  \\
                 \midrule
                 \bottomrule
         \end{tabular}
