--- a/markdown/Trabalho I/relatorio_test.tex
+++ b/markdown/Trabalho I/relatorio_test.tex
@@ -24,51 +24,11 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={Testando exportar para pdf mané},
-            pdfauthor={Daniel dos Santos},
+            pdftitle={Trabalho de Estatística Aplicada},
+            pdfauthor={Daniel dos Santos e Gabriel Mizuno},
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
-\usepackage{color}
-\usepackage{fancyvrb}
-\newcommand{\VerbBar}{|}
-\newcommand{\VERB}{\Verb[commandchars=\\\{\}]}
-\DefineVerbatimEnvironment{Highlighting}{Verbatim}{commandchars=\\\{\}}
-% Add ',fontsize=\small' for more characters per line
-\usepackage{framed}
-\definecolor{shadecolor}{RGB}{248,248,248}
-\newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
-\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
-\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
-\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\ImportTok}[1]{#1}
-\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
-\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
-\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
-\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
-\newcommand{\BuiltInTok}[1]{#1}
-\newcommand{\ExtensionTok}[1]{#1}
-\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
-\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
-\newcommand{\RegionMarkerTok}[1]{#1}
-\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
-\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
-\newcommand{\NormalTok}[1]{#1}
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -114,10 +74,10 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{Testando exportar para pdf mané}
+  \title{Trabalho de Estatística Aplicada}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
-    \author{Daniel dos Santos}
+    \author{Daniel dos Santos e Gabriel Mizuno}
     \preauthor{\centering\large\emph}
   \postauthor{\par}
       \predate{\centering\large\emph}
@@ -136,42 +96,54 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\subsection{R Markdown}\label{r-markdown}
+\subsection{1-) Objetivo:}\label{objetivo}
 
-This is an R Markdown document. Markdown is a simple formatting syntax
-for authoring HTML, PDF, and MS Word documents. For more details on
-using R Markdown see \url{http://rmarkdown.rstudio.com}.
+\begin{itemize}
+\tightlist
+\item
+  Montar um perfil dos clientes segundo seu sexo.\\
+\item
+  Avalar o perfil dos clientes co conta bancária em relação à satisfação
+  com o limite de crédito desponível.
+\end{itemize}
 
-When you click the \textbf{Knit} button a document will be generated
-that includes both content as well as the output of any embedded R code
-chunks within the document. You can embed an R code chunk like this:
+\subsection{2-) Metodologia:}\label{metodologia}
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{summary}\NormalTok{(cars)}
-\end{Highlighting}
-\end{Shaded}
+Foi realizados os seguintes testes para responder os objetivos desse
+relatório Qui-Quadrado, Teste de Hipóteses para Média, Teste de
+Hipóteses para Variância e Teste de Kolmogorov-Smirnov usando um nível
+de significância de 10\% (\(\alpha\)=10\%). Para a análise e confecção
+desse relatório foram avaliadas somente algumas variáveis que foram
+consideradas de interesse para responder as perguntas 1 e 2.
 
-\begin{verbatim}
-##      speed           dist       
-##  Min.   : 4.0   Min.   :  2.00  
-##  1st Qu.:12.0   1st Qu.: 26.00  
-##  Median :15.0   Median : 36.00  
-##  Mean   :15.4   Mean   : 42.98  
-##  3rd Qu.:19.0   3rd Qu.: 56.00  
-##  Max.   :25.0   Max.   :120.00
-\end{verbatim}
+\subsection{3-) Análise dos Resultados:}\label{analise-dos-resultados}
 
-\subsection{Including Plots}\label{including-plots}
+\subsection{4-) Conclusão:}\label{conclusao}
 
-You can also embed plots, for example:
+\subsection{5-)Apêndice:}\label{apendice}
 
-\begin{center}\includegraphics{relatorio_test_files/figure-latex/pressure-1} \end{center}
+\subsubsection{5.1-) Figuras:}\label{figuras}
 
-Note that the \texttt{echo\ =\ FALSE} parameter was added to the code
-chunk to prevent printing of the R code that generated the plot.
+\begin{figure}
+\centering
+\includegraphics[width=2.60417in]{Bancos.png}
+\caption{Número de clientes por banco}
+\end{figure}
 
-\begin{table*}[t]
+\includegraphics[width=2.60417in]{QQ Plot idade genero.jpeg}
+\includegraphics[width=2.60417in]{QQplot Idade x Lim.jpeg}
+
+\includegraphics[width=2.60417in]{QQ Plot idade genero.jpeg}
+\includegraphics[width=2.60417in]{Nome no SERASA por sexo.jpeg}
+
+\includegraphics[width=2.60417in]{Estado civil por Sexo.jpeg}
+\includegraphics[width=2.60417in]{Entedimento do Layout.jpeg}
+
+** ESTA DANDO RUIM NA HORA DE COLOCAR GERENTE X ALGUMA COISA **
+
+\subsubsection{5.2-) Tabelas:}\label{tabelas}
+
+\begin{table*}[t!]
     \centering
         \begin{tabular}{c c c c c c c c c}
             \toprule
@@ -228,12 +200,6 @@ chunk to prevent printing of the R code that generated the plot.
         \caption{COLOCAR DESCRIÇÃO DA TABELA AQUI!}
         \label{tab:sam_count}
 \end{table*}
-
-\begin{figure}
-\centering
-\includegraphics[width=2.60417in]{hqdefault.jpg}
-\caption{E AI GAY, TÁ TÃO SÉRIO PORQUÊ}
-\end{figure}
 
 
 \end{document}
