--- a/markdown/Trabalho I/relatorio_test.tex
+++ b/markdown/Trabalho I/relatorio_test.tex
@@ -124,11 +124,8 @@ consideradas de interesse para responder as perguntas 1 e 2.
 
 \subsubsection{5.1-) Figuras:}\label{figuras}
 
-\begin{figure}
-\centering
 \includegraphics[width=2.60417in]{Bancos.png}
-\caption{Número de clientes por banco}
-\end{figure}
+\includegraphics[width=2.60417in]{pictograma.png}
 
 \includegraphics[width=2.60417in]{QQ Plot idade genero.jpeg}
 \includegraphics[width=2.60417in]{QQplot Idade x Lim.jpeg}
