--- a/markdown/Trabalho I/relatorio_test.tex
+++ b/markdown/Trabalho I/relatorio_test.tex
@@ -124,19 +124,19 @@ consideradas de interesse para responder as perguntas 1 e 2.
 
 \subsubsection{5.1-) Figuras:}\label{figuras}
 
-\includegraphics[width=2.60417in]{Bancos.png}
-\includegraphics[width=2.60417in]{pictograma.png}
+\includegraphics[width=3.12500in]{Bancos.png}
+\includegraphics[width=3.12500in]{pictograma.png}
 
-\includegraphics[width=2.60417in]{QQ Plot idade genero.jpeg}
-\includegraphics[width=2.60417in]{QQplot Idade x Lim.jpeg}
+\includegraphics[width=3.12500in]{QQ Plot idade genero.jpeg}
+\includegraphics[width=3.12500in]{QQplot Idade x Lim.jpeg}
 
-\includegraphics[width=2.60417in]{QQ Plot idade genero.jpeg}
-\includegraphics[width=2.60417in]{Nome no SERASA por sexo.jpeg}
+\includegraphics[width=3.12500in]{QQ Plot idade genero.jpeg}
+\includegraphics[width=3.12500in]{Nome no SERASA por sexo.jpeg}
 
-\includegraphics[width=2.60417in]{Estado civil por Sexo.jpeg}
-\includegraphics[width=2.60417in]{Entedimento do Layout.jpeg}
+\includegraphics[width=3.12500in]{Estado civil por Sexo.jpeg}
+\includegraphics[width=3.12500in]{Entedimento do Layout.jpeg}
 
-** ESTA DANDO RUIM NA HORA DE COLOCAR GERENTE X ALGUMA COISA **
+\textbf{ESTA DANDO RUIM NA HORA DE COLOCAR GERENTE X ALGUMA COISA}
 
 \subsubsection{5.2-) Tabelas:}\label{tabelas}
 
@@ -197,7 +197,7 @@ consideradas de interesse para responder as perguntas 1 e 2.
         \end{tabular}
         \centering
         \caption{COLOCAR DESCRIÇÃO DA TABELA AQUI!}
-        \label{table:1}
+        \label{table:tab1}
         \label{tab:sam_count}
 \end{table*}
 
@@ -213,11 +213,11 @@ consideradas de interesse para responder as perguntas 1 e 2.
       \hline
     \end{tabular}
     \caption{Tabela com algumas medidas resumo}
-     \label{table:2}
+     \label{table:tab2}
   \end{center}
 \end{table}
 
-aaa \ref{table:1}
+aaa \ref{table:tab2}
 
 
 \end{document}
