--- a/markdown/Trabalho I/relatorio_test.tex
+++ b/markdown/Trabalho I/relatorio_test.tex
@@ -136,6 +136,12 @@ consideradas de interesse para responder as perguntas 1 e 2.
 \includegraphics[width=3.12500in]{Estado civil por Sexo.jpeg}
 \includegraphics[width=3.12500in]{Entedimento do Layout.jpeg}
 
+\begin{figure}
+\centering
+\includegraphics[width=3.12500in]{Gerente Satisfacao.jpeg}
+\caption{Número de clientes por banco}
+\end{figure}
+
 \textbf{ESTA DANDO RUIM NA HORA DE COLOCAR GERENTE X ALGUMA COISA}
 
 \subsubsection{5.2-) Tabelas:}\label{tabelas}
