--- a/markdown/Trabalho I/relatorio_test.tex
+++ b/markdown/Trabalho I/relatorio_test.tex
@@ -118,6 +118,10 @@ consideradas de interesse para responder as perguntas 1 e 2.
 
 \subsection{3-) Análise dos Resultados:}\label{analise-dos-resultados}
 
+\begin{verbatim}
+Com base em nos resultados da base de dados, no nível de significância (estabelecido na seção anterior) e usando os teste e análises adequados, para cada situação, podemos concluir que a média de idade dos homens é maior do as das mulheres (p-valor=0.9989>$\alpha$), também podemos ver que 17.9%  das pessoas que possuem nome são mulheres e baseado no teste Qui-Quadrado podemos dizer que 
+\end{verbatim}
+
 \subsection{4-) Conclusão:}\label{conclusao}
 
 \subsection{5-)Apêndice:}\label{apendice}
@@ -139,10 +143,8 @@ consideradas de interesse para responder as perguntas 1 e 2.
 \begin{figure}
 \centering
 \includegraphics[width=3.12500in]{Gerente Satisfacao.jpeg}
-\caption{Número de clientes por banco}
+\caption{Satisfação de quem falou com o gerente}
 \end{figure}
-
-\textbf{ESTA DANDO RUIM NA HORA DE COLOCAR GERENTE X ALGUMA COISA}
 
 \subsubsection{5.2-) Tabelas:}\label{tabelas}
 
@@ -202,7 +204,7 @@ consideradas de interesse para responder as perguntas 1 e 2.
                 \bottomrule
         \end{tabular}
         \centering
-        \caption{COLOCAR DESCRIÇÃO DA TABELA AQUI!}
+        \caption{Tabela de contigência com p-valor}
         \label{table:tab1}
         \label{tab:sam_count}
 \end{table*}
