--- a/markdown/Trabalho I/relatorio_test.tex
+++ b/markdown/Trabalho I/relatorio_test.tex
@@ -118,9 +118,14 @@ consideradas de interesse para responder as perguntas 1 e 2.
 
 \subsection{3-) Análise dos Resultados:}\label{analise-dos-resultados}
 
-\begin{verbatim}
-Com base em nos resultados da base de dados, no nível de significância (estabelecido na seção anterior) e usando os teste e análises adequados, para cada situação, podemos concluir que a média de idade dos homens é maior do as das mulheres (p-valor=0.9989>$\alpha$), também podemos ver que 17.9%  das pessoas que possuem nome são mulheres e baseado no teste Qui-Quadrado podemos dizer que 
-\end{verbatim}
+Com base em nos resultados da base de dados, no nível de significância
+(estabelecido na seção anterior) e usando os teste e análises adequados,
+para cada situação, podemos concluir que a média de idade dos homens
+descritivas é maior do as das mulheres
+(p-valor=0.9989\textgreater{}\(\alpha\)), também podemos ver que 17.9\%
+das pessoas que possuem nome são mulheres e baseado no teste
+Qui-Quadrado podemos dizer que a variável sexo e possuir nome no SERASA
+são dependentes (pois p-valor=0.0005155\textless{}\(\alpha\))
 
 \subsection{4-) Conclusão:}\label{conclusao}
 
