--- a/markdown/Trabalho I/relatorio_test.Rmd
+++ b/markdown/Trabalho I/relatorio_test.Rmd
@@ -5,9 +5,10 @@ date: "04 de Setembro de 2018"
 output:
   pdf_document:
     fig_caption: yes
-    fig_crop: yes
     keep_tex: yes
-header-includes: \usepackage{booktabs} \usepackage{longtable} \usepackage{array} \usepackage{multirow} \usepackage[table]{xcolor} \usepackage{wrapfig} \usepackage{float} \floatplacement{figure}{H} \usepackage{booktabs} \usepackage{multirow} \usepackage{rotating}
+    toc: yes
+    toc_depth: 3
+header-includes: \usepackage{booktabs} \usepackage{longtable} \usepackage{array} \usepackage{multirow} \usepackage[table]{xcolor} \usepackage{wrapfig} \usepackage{float} \floatplacement{figure}{H} \usepackage{booktabs} \usepackage{multirow} \usepackage{rotating} \usepackage{indentfirst}
 ---
 
 ```{r setup, include=FALSE}
@@ -23,13 +24,29 @@ knitr::opts_chunk$set(echo = TRUE,
 
 ## 2-) Metodologia:
 
-  Foi realizados os seguintes testes para responder os objetivos desse relatório Qui-Quadrado, Teste de Hipóteses para Média, Teste de Hipóteses para Variância e Teste de Kolmogorov-Smirnov usando um nível de significância de 10% ($\alpha$=10%). Para a análise e confecção desse relatório foram avaliadas somente algumas variáveis que foram consideradas de interesse para responder as perguntas 1 e 2. 
+<p>Foi realizados os seguintes testes para responder os objetivos desse relatório Qui-Quadrado, Teste de Hipóteses para Média, Teste de Hipóteses para Variância e Teste de Kolmogorov-Smirnov usando um nível de significância de 10% ($\alpha$=10%). Para a análise e confecção desse relatório foram avaliadas somente algumas variáveis que foram consideradas de interesse para responder as perguntas 1 e 2.</p> 
 	
 ## 3-) Análise dos Resultados:
 
-  Com base nos resultados da base de dados, no nível de significância (estabelecido na seção anterior) e usando os testes e análises descritivas adequados, para cada situação, podemos concluir que a média de idade dos homens é maior do as das mulheres (p-valor=0.9989>$\alpha$), também podemos ver que 17.9%  das pessoas que possuem nome no SERASA são mulheres e baseado no teste Qui-Quadrado podemos dizer que a variável "sexo" e "possuir nome no SERASA" são dependentes (pois p-valor=0.0005155<$\alpha$), fazendo as mesmas análises que fizemos anteriormente podemos concluir que as variáveis "estado civil"" e "sexo" são independentes (usando o p-valor da tabela \ref{table:tab1}).
+<p>Com base nos resultados da base de dados, no nível de significância (estabelecido na seção anterior) e usando os testes e análises descritivas adequados, para cada situação, podemos concluímos para o **1º objetivo** que:</p>
+
+  * Utilizando o teste Qui-Quadrado podemos dizer que as variáveis “Banco” e “Satisfeito com o limite” são independentes (usando o p-valor da tabela \ref{table:tab1}).
+  * Primeiro temos que pelo teste de Kolmogorov-Smirnov que as amostras possuem distribuição normal para o nível de significância de 10%,  temos também que pelo t-test que a média de idade das pessoas não satisfeitas com o limite oferecido é maior do as que estão satisfeitas com seu limite (p-valor=0.1445>$\alpha$).
+  *	Utilizando o teste Qui-Quadrado podemos dizer que as variáveis “Banco” e “Satisfeito com o limite” são independentes (usando o p-valor da tabela \ref{table:tab1}).
+  
+  **2º objetivo:**
+  
+  *	Para analisarmos as variáveis “Tempo que é cliente” e “Satisfeito com o limite” estamos considerando que temos normalidade assintótica, nesse cenário podemos dizer que a média de idade de quem é satisfeito com o limite é maior do quem não é satisfeito (p-valor=0.01669<$\alpha$).
+ *	Utilizando o teste Qui-Quadrado podemos dizer que as variáveis “Falou com gerente” e “Satisfeito com o limite” são independentes (usando o p-valor da tabela \ref{table:tab1}).
+ *	Utilizando o teste Qui-Quadrado podemos dizer que as variáveis “sexo” e “Satisfeito com o limite” são dependentes (usando o p-valor da tabela \ref{table:tab1}).
+
+\pagebreak
 
 ## 4-) Conclusão:
+
+<p>Verificamos, seção anterior, que há uma relação entre as variáveis “sexo” e “possuir nome no SERASA”, utilizando a analise descritiva na \ref{table:tab2} temos evidências que dos possuem nome no SERASA a maioria (64.9%) são homens já as mulheres estão em minoria com 35.1%. Por outro lado, os homens são os mais satisfeitos com o limite da conta, acreditamos que o limite oferecido aos homens é incompatível com a situação de inadimplência. Sendo assim, seria mais adequado reduzir o limite dos homens e  oferecer para a mulher não inadimplentes um limite maior.</p>   
+<p>Pensando quanto a satisfação dos clientes em relação limite oferecido podemos afirmar que os clientes do Bradesco são proporcionalmente mais satisfeitos com limite oferecido (80%), já a Caixa possui a maior porcentagem de insatisfação dos clientes com o limite.</p>   
+<p>Usando os teste adequado, a tabela \ref{table:tab2} e um boxplot gráfico ,presente no apêndice, podemos dizer que o tempo de uso semanal do Bankline aumentou para quem fez o curso. Portanto, suspeitamos que o curso incentivou o usuário usar mais os serviço disponíveis no Bankline sendo assim o curso foi efetivo.</p>
 
 \pagebreak 
 
@@ -38,6 +55,7 @@ knitr::opts_chunk$set(echo = TRUE,
 ### 5.1-) Figuras:
 
 ![Número de clientes por banco](Bancos.png){ width=300px } 
+
 ![Quantidade de mulheres e homens](pictograma.png){ width=300px }
 
 ![QQ plot da Idade por genero](QQ Plot idade genero.jpeg){ width=300px }
@@ -59,6 +77,7 @@ knitr::opts_chunk$set(echo = TRUE,
 
 \begin{table*}[h!]
     \centering
+        \caption{Tabela de contigência com p-valor}
         \begin{tabular}{c c c c c c c c c}
             \toprule
             \midrule
@@ -66,7 +85,7 @@ knitr::opts_chunk$set(echo = TRUE,
                 && \multicolumn{2}{c}{Masculino} & \multicolumn{2}{c}{Feminino} & \multicolumn{2}{c}{Total} \\ \cmidrule{3-9}
                 && n & \% & n & \% & n & \% & P-Valor \\ \cmidrule{3-9}
                 \multicolumn{1}{c}{\multirow{5}{*}}   &
-                \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  & & &  & 0.0005155 \\ \cmidrule{1-9}
+                \multicolumn{1}{l}{\textbf{SERASA}} &  &  &  & & &  & \textcolor{red}{0.0005155} \\ \cmidrule{1-9}
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{Não} & 37 & 39.8 & 56 & 60.2 & 93 & 48.9 &  \\
                 \multicolumn{1}{c}{}    &
@@ -108,18 +127,23 @@ knitr::opts_chunk$set(echo = TRUE,
                 \multicolumn{1}{c}{}    &
                 \multicolumn{1}{l}{Não} & 28 & 31.8 & 60 & 68.2 & 88 & 48.9 &  \\
                 \multicolumn{1}{c}{}    &
-                \multicolumn{1}{l}{Sim}& 23 & 22.5 & 79 & 77.5 & 102 & 51.1  \\
+                \multicolumn{1}{l}{Sim}& 23 & 22.5 & 79 & 77.5 & 102 & 51.1  \\ \cmidrule{1-9} &
+                \multicolumn{1}{l}{\textbf{Sexo}} &   &  &  & & &  & \textcolor{red}{0.001251} \\ \cmidrule{1-9}
+                \multicolumn{1}{c}{}    &
+                \multicolumn{1}{l}{Feminino} & 34 & 37.8 & 56 & 62.2 & 90 & 47.4 &  \\
+                \multicolumn{1}{c}{}    &
+                \multicolumn{1}{l}{Masculino}& 17 & 17 & 79 & 83 & 83 & 52.6  \\
                 \midrule
                 \bottomrule
         \end{tabular}
         \centering
-        \caption{Tabela de contigência com p-valor}
         \label{table:tab1}
         \label{tab:sam_count}
 \end{table*}
 
 \begin{table}[h!]
   \begin{center}
+  \caption{Tabela com algumas medidas resumo}
     \begin{tabular}{c|c|c|c|c|c|c|c}
     \hline
       \textbf{Variável} & \textbf{Min} & \textbf{Max} & \textbf{1º Q} & \textbf{2º Q} & \textbf{3º Q} & \textbf{Média}  & \textbf{Desvio Padrão} \\
@@ -129,7 +153,6 @@ knitr::opts_chunk$set(echo = TRUE,
       Tempo de uso do Bankline depois do curso & 34 & 65 & 48 & 50 & 51 & 49.92 & 3.87 \\ 
       \hline
     \end{tabular}
-    \caption{Tabela com algumas medidas resumo}
      \label{table:tab2}
   \end{center}
 \end{table}
