--- a/Relatorio/Trabalho 3/Relatorio.tex
+++ b/Relatorio/Trabalho 3/Relatorio.tex
@@ -48,7 +48,7 @@
  
 \section{Introdução}
 
-Com o crescimento da industria dos jogos eletrónicos e a alta competitividade entre as produtoras de jogos, a analise do perfil de consumo dos usuários torna-se cada vez mais necessária para conquista e fidelização de seus usurários. Essa pesquisa visa fazer essa analise ,não muito profunda, sobre usuários que vivem no Brasil, 
+Com rápido e surpreendente crescimento da industria dos jogos eletrónicos, como foi observado em 2016, onde a final do mundial do jogo League of Legends teve mais telespectadores do que os sete (7) jogos da final da NBA (\href{https://bit.ly/2Dvdtw9}{\textcolor{blue}{LoL vs NBA}}) e em uma outra situação, onde lançamento dos principais jogos tiveram lucros maiores do que Blockters feito em Hollywood  (\href{https://bit.ly/2FfWHTk}{\textcolor{blue}{Filmes vs Jogos}}), a analise do perfil de consumo dos usuários torna-se cada vez mais necessária para conquista e fidelização de seus usurários. Essa pesquisa visa fazer essa analise, de maneira não muito profunda, sobre usuários que vivem no Brasil, 
 \\ 
 \\
 \textcolor{red}{\textbf{DANIEL COLOCAR LINK QUE VC COMENTOU SOBRE A FILMES x GAMES}}
@@ -61,6 +61,8 @@ Para a obtenção dos dados foi criado um formulário usando o Google Forms  e d
 \item Ser jogador independente da plataforma;
 \item Ser brasileiro ou morar no Brasil.
 \end{enumerate}
+Depois de coletados os dados foram utilizados os software estatístico Rstudio e Excel, também foi necessário tratar a base de dados, pois durante a obtenção desses dados alguns voluntários colocaram respostas que não condiziam com a realidade do ser humano, como por exemplo idades acima de 170 anos e idades negativas. Depois de tratada foi iniciada as analises estatísticas, nessas analises foram usados testes de normalidade (Teste de Kolmogorov-Smirnov)
+\\
 
  
 \section{Conclusão}
