Começando as analises

--- a/Relatorio/Trabalho 3/Relatorio.tex
+++ b/Relatorio/Trabalho 3/Relatorio.tex
@@ -61,7 +61,14 @@ Para a obtenção dos dados foi criado um formulário usando o Google Forms  e d
 \item Ser jogador independente da plataforma;
 \item Ser brasileiro ou morar no Brasil.
 \end{enumerate}
-Depois de coletados os dados foram utilizados os software estatístico Rstudio e Excel, também foi necessário tratar a base de dados, pois durante a obtenção desses dados alguns voluntários colocaram respostas que não condiziam com a realidade do ser humano, como por exemplo idades acima de 170 anos e idades negativas. Depois de tratada foi iniciada as analises estatísticas, nessas analises foram usados testes de normalidade (Teste de Kolmogorov-Smirnov)
+Depois de coletados os dados foram utilizados os software estatístico Rstudio e Excel, também foi necessário tratar a base de dados, pois durante a obtenção desses dados alguns voluntários colocaram respostas que não condiziam com a realidade do ser humano, sendo assim foram usados os seguintes criterio para retirar essa anomalias.
+ \begin{enumerate}[label=(\roman*)]
+\item pessoas com menos de 15 com superior ou médio completo; 
+\item pessoas com menos de 13 com superior ou médio ou fundamental completo;
+\item pessoas com menos de 0 anos ou mais de 100;
+\item aaa
+\end{enumerate}
+Depois de tratada foi iniciada as analises estatísticas, nessas analises foram usados testes de normalidade (Teste de Kolmogorov-Smirnov)
 \\
 
  
