--- a/Relatorio/Trabalho 3/Relatorio.tex
+++ b/Relatorio/Trabalho 3/Relatorio.tex
@@ -48,32 +48,41 @@
  
 \section{Introdução}
 
-Com rápido e surpreendente crescimento da industria dos jogos eletrónicos, como foi observado em 2016, onde a final do mundial do jogo League of Legends teve mais telespectadores do que os sete (7) jogos da final da NBA (\href{https://bit.ly/2Dvdtw9}{\textcolor{blue}{LoL vs NBA}}) e em uma outra situação, onde lançamento dos principais jogos tiveram lucros maiores do que Blockters feito em Hollywood  (\href{https://bit.ly/2FfWHTk}{\textcolor{blue}{Filmes vs Jogos}}), a analise do perfil de consumo dos usuários torna-se cada vez mais necessária para conquista e fidelização de seus usurários. Essa pesquisa visa fazer essa analise, de maneira não muito profunda, sobre usuários que vivem no Brasil, 
+Com rápido e surpreendente crescimento da industria dos jogos eletrónicos, como foi observado em 2016, onde a final do mundial do jogo League of Legends teve mais telespectadores do que os sete (7) jogos da final da NBA (\href{https://bit.ly/2Dvdtw9}{\textcolor{blue}{LoL vs NBA}}) e em uma outra situação, onde lançamento dos principais jogos tiveram lucros maiores do que blockbusters feitos em Hollywood  (\href{https://bit.ly/2FfWHTk}{\textcolor{blue}{Filmes vs Jogos}}), a análise do perfil de consumo dos usuários torna-se cada vez mais necessária para conquista e fidelização de seus usurários. Essa pesquisa visa fazer essa analise, de maneira não muito profunda, sobre usuários que vivem no Brasil. 
 \\ 
 \\
  
 \section{Metodologia}
 
-Para a obtenção dos dados foi criado um formulário usando o Google Forms  e durante o período de 1 de Novembro de 2018 ate 13 de Novembro de 2018 foi distribuído em grupo de discussão na plataforma do Facebook. Para a construção do formulário foi usado os seguintes critério:
+Para a obtenção dos dados foi criado um formulário usando o Google Forms  e durante o período de 1 de Novembro de 2018 até 13 de Novembro de 2018 foi distribuído em grupo de discussão na plataforma do Facebook. Para a construção do formulário foi usado os seguintes critério:
 
 \begin{enumerate}[label=(\roman*)]
 \item Ser jogador independente da plataforma;
 \item Ser brasileiro ou morar no Brasil.
 \end{enumerate}
+
 Depois de coletados os dados foram utilizados os software estatístico Rstudio e Excel, também foi necessário tratar a base de dados, pois durante a obtenção desses dados alguns voluntários colocaram respostas que não condiziam com a realidade do ser humano, sendo assim foram usados os seguintes critério para retirar essa anomalias.
  \begin{enumerate}[label=(\roman*)]
 \item Pessoas com menos de 15 com Ensino Superior ou Médio completo; 
 \item Pessoas com menos de 13 com  Ensino Superior ou Médio  ou Fundamental completo;
-\item Pessoas com menos de 0 anos ou mais de 100 anos1;
+\item Pessoas com menos de 0 anos ou mais de 100 anos;
 \item Pessoas com menos de 19 anos com Pós-Graduação
 \end{enumerate}
-Depois de realizado essa filtração tirando cerca de XXXXX voluntários.
+Depois de realizado essa filtração tirando cerca de 171 voluntários.
 \\
 
 Depois de tratada foi iniciada as analises estatísticas, nessas analises foram usados testes de normalidade (Teste de Kolmogorov-Smirnov)
 
 \subsection{Escala Likert}
 
+A Escala Likert é utilizada para mensurar tendências de uma questão ou afirmação. Utilizamos esse método para avaliar a importância de certas características de jogos. Para isso, dividimos as respostas em 3 itens:
+
+OBS MIZUNO COLOCA PONTINHO AO INVÉS DE (i)
+ \begin{enumerate}[label=(\roman*)] 
+\item Muita importância; 
+\item Média importância;
+\item Pouca importância;
+\end{enumerate}
  
 \section{Conclusão}
 
