Mudei o numero para potinho

--- a/Relatorio/Trabalho 3/Relatorio.tex
+++ b/Relatorio/Trabalho 3/Relatorio.tex
@@ -78,11 +78,11 @@ Depois de tratada foi iniciada as analises estatísticas, nessas analises foram 
 A Escala Likert é utilizada para mensurar tendências de uma questão ou afirmação. Utilizamos esse método para avaliar a importância de certas características de jogos. Para isso, dividimos as respostas em 3 itens:
 
 OBS MIZUNO COLOCA PONTINHO AO INVÉS DE (i)
- \begin{enumerate}[label=(\roman*)] 
+\begin{itemize}[noitemsep,nolistsep]
 \item Muita importância; 
 \item Média importância;
 \item Pouca importância;
-\end{enumerate}
+\end{itemize}
  
 \section{Conclusão}
 
