--- a/Relatorio/Trabalho 3/Relatorio.tex
+++ b/Relatorio/Trabalho 3/Relatorio.tex
@@ -45,7 +45,8 @@
 \maketitle
  
 \tableofcontents
- 
+
+\newpage
 \section{Introdução}
 
 Com rápido e surpreendente crescimento da industria dos jogos eletrónicos, como foi observado em 2016, onde a final do mundial do jogo League of Legends teve mais telespectadores do que os sete (7) jogos da final da NBA (\href{https://bit.ly/2Dvdtw9}{\textcolor{blue}{LoL vs NBA}}) e em uma outra situação, onde lançamento dos principais jogos tiveram lucros maiores do que blockbusters feitos em Hollywood  (\href{https://bit.ly/2FfWHTk}{\textcolor{blue}{Filmes vs Jogos}}), a análise do perfil de consumo dos usuários torna-se cada vez mais necessária para conquista e fidelização de seus usurários. Essa pesquisa visa fazer essa analise, de maneira não muito profunda, sobre usuários que vivem no Brasil. 
@@ -67,8 +68,9 @@ Depois de coletados os dados foram utilizados os software estatístico Rstudio e
 \item Pessoas com menos de 13 com  Ensino Superior ou Médio  ou Fundamental completo;
 \item Pessoas com menos de 0 anos ou mais de 100 anos;
 \item Pessoas com menos de 19 anos com Pós-Graduação
+\item Pessoas que responderam Nenhum na pergunta "Quais desses produtos relacionados a jogos você costuma comprar?" e marcaram alguma outra opções na mesma pergunta.
 \end{enumerate}
-Depois de realizado essa filtração tirando cerca de 171 voluntários.
+Depois de realizado essa filtração tirando cerca de 186 voluntários, totalizando assim um total de 1792 voluntários 
 \\
 
 Depois de tratada foi iniciada as analises estatísticas, nessas analises foram usados testes de normalidade (Teste de Kolmogorov-Smirnov)
@@ -77,7 +79,6 @@ Depois de tratada foi iniciada as analises estatísticas, nessas analises foram 
 
 A Escala Likert é utilizada para mensurar tendências de uma questão ou afirmação. Utilizamos esse método para avaliar a importância de certas características de jogos. Para isso, dividimos as respostas em 3 itens:
 
-OBS MIZUNO COLOCA PONTINHO AO INVÉS DE (i)
 \begin{itemize}[noitemsep,nolistsep]
 \item Muita importância; 
 \item Média importância;
